--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <!-- Item 1 -->
           <div class="flex flex-col items-center space-y-5">
             <img src="images/icon-blacklist.min.svg" alt="" class="mb-6" />
-            <p>Create Blacklists</p>
+            <h5><b>Create Blacklists</b></h5>
             <p class="max-w-md text-grayishBlue">
               Boost your productivity by creating blacklists to organize and categorize your copied content. 
             </p>
@@ -139,7 +139,7 @@
           <!-- Item 2 -->
           <div class="flex flex-col items-center space-y-5">
             <img src="images/icon-text.min.svg" alt="" class="mb-6" />
-            <p>Plain Text Snippets</p>
+            <h4><b>Plain Text Snippets</b></h4>
             <p class="max-w-md text-grayishBlue">
               Simplify your copy-pasting tasks with our collection of plain text snippet tools. 
             </p>
@@ -173,7 +173,7 @@
     <!-- Bottom CTA Section -->
     <section id="bottom">
       <div class="my-20 section-container">
-        <h5><b>Clipboard for iOS and MacOS</b></h5>
+        <h2><b>Clipboard for iOS and MacOS</b></h2>
         <p class="mb-10 text-1xl section-content">
           Discover the top clipboard managers for your Mac and iOS devices. 
         </p>
